Update model-log and log-log comparison verbalization